--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.29"
+    "pinia": "^2.2.4",
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
