--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
     "pinia": "^2.2.4",
+    "vue": "^3.4.29",
+    "vue-grid-layout": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
