--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.4",
-    "vue": "^3.4.29",
-    "vue-grid-layout": "^2.4.0"
+    "vue": "^3.4.29"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
