--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Custom New Tab",
+    "name": "Cool Tab",
     "version": "1.0",
-    "description": "A custom new tab page using Vue.js",
+    "description": "Just a new tab for your browser, but cooler",
     "chrome_url_overrides": {
         "newtab": "index.html"
     }
