--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "marked": "^5.1.2",
     "pinia": "^2.2.4",
     "vue": "^3.4.29"
   },
